New Version Picker!

--- a/DexMasterUI/Components/Display/PokemonDetails.razor
+++ b/DexMasterUI/Components/Display/PokemonDetails.razor
@@ -1,35 +1,7 @@
 @using DexMasterLibrary.Enums
 @if (_pokemon != null && _pokemonSpecies != null)
 {
-    <MudStack>
-        @if (_generations != null && _generations.Any())
-        {
-            <MudChipSet @bind-SelectedChip="_selectedGen" SelectedChipsChanged="GenerationChanged" Mandatory="true">
-                @foreach (var generation in _generations)
-                {
-                    <MudChip Color="Color.Primary" Text="@generation.Name" SelectedColor="Color.Success">@generation.Name</MudChip>
-                }
-            </MudChipSet>
-        }
-        @if (_selectedGeneration != null)
-        {
-            <MudChipSet @bind-SelectedChip="_selectedVerGrp" SelectedChipsChanged="VersionGroupChanged" Mandatory="true">
-                @foreach (var versionGroup in _selectedGeneration.VersionGroups)
-                {
-                    <MudChip Color="Color.Primary" Text="@versionGroup.Name" SelectedColor="Color.Success">@versionGroup.Name</MudChip>
-                }
-            </MudChipSet>
-        }
-        @if (_selectedVersionGroup != null)
-        {
-            <MudChipSet @bind-SelectedChip="_selectedVer" SelectedChipsChanged="VersionChanged" Mandatory="true">
-                @foreach (var version in _selectedVersionGroup.Versions)
-                {
-                    <MudChip Color="Color.Primary" Text="@version.Name" SelectedColor="Color.Success">@version.Name</MudChip>
-                }
-            </MudChipSet>
-        }
-    </MudStack>
+    <VersionPicker SelectedVersionChanged="SetVersion"></VersionPicker>
   
     <MudText Typo="Typo.h6">@_pokemonInfo.Name</MudText>
     <MudText Typo="Typo.h6">@_pokemonInfo.Type1</MudText>
@@ -37,9 +9,9 @@
     <MudImage Src="@_pokemon.Sprites.FrontDefault"/>
     <MudText Typo="Typo.body1">@_pokemonInfo.FlavourText</MudText>
     
-    @if (_selectedGen != null)
+    @if (SelectedVersion != null)
     {
-        <MudText>You selected @_selectedGen.Text</MudText>
+        <MudText>You selected @SelectedVersion</MudText>
     }
 }
 
@@ -50,18 +22,13 @@
     [CascadingParameter] 
     public User LoggedInUser { get; set; }
 
+    private string SelectedVersion { get; set; }
     private Pokemon _pokemon;
     private PokemonSpecies _pokemonSpecies;
     private PokemonInfo _pokemonInfo = new();
-    private IEnumerable<Generation> _generations;
-    private IEnumerable<VersionGroup> _versionGroups;
-    private MudChip _selectedGen;
-    private MudChip _selectedVerGrp;
-    private MudChip _selectedVer;
-    private Generation _selectedGeneration;
-    private VersionGroup _selectedVersionGroup;
-    private PokeApiNet.Version _selectedVersion;
+
     private PokeApiService _pokeApiService = new();
+    
   
     private class PokemonInfo
     {
@@ -80,8 +47,6 @@
     {
         _pokemon = await pokemonData.GetPokemonByIdAsync(PokemonId);
         _pokemonSpecies = await pokemonSpeciesData.GetPokemonSpeciesByIdAsync(PokemonId);
-        
-        _generations = await pokeApiService.GetGenerationListAsync();
 
         if (_pokemon != null && _pokemonSpecies != null)
         {
@@ -96,19 +61,9 @@
             _pokemonInfo.FlavourText = _pokemonSpecies.FlavorTextEntries.FirstOrDefault(x => x.Language.Name == "en").FlavorText;
         }
     }
-    
-    private async Task GenerationChanged()
+
+    private void SetVersion(string version)
     {
-        _selectedGeneration = await _pokeApiService.GetGenerationByNameAsync(_selectedVerGrp.Text);
-    }
-    
-    private async Task VersionGroupChanged()
-    {
-        _selectedVersionGroup = await _pokeApiService.GetVersionGroupByNameAsync(_selectedVerGrp.Text);
-    }
-    
-    private async Task VersionChanged()
-    {
-        _selectedVersion = await _pokeApiService.GetVersionByNameAsync(_selectedVer.Text);
+        SelectedVersion = version;
     }
 }
