--- a/DexMasterUI/_Imports.razor
+++ b/DexMasterUI/_Imports.razor
@@ -15,7 +15,7 @@
 @using DexMasterUI.Components.Users
 @using DexMasterUI.Components.Layout
 @using DexMasterUI.Components.Account
-@using DexMasterUI.Services
+@using DexMasterLibrary.Services
 @using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage;
 
 @inject ProtectedLocalStorage protectedLocalStorage
