--- a/DexMasterUI/Components/Display/PokemonGrid.razor
+++ b/DexMasterUI/Components/Display/PokemonGrid.razor
@@ -84,7 +84,7 @@
     private User _loggedInUser = null;
     private bool _isLoading = true;
     private int _totalPages = 1;
-    private int _totalPokemon = 1017;
+    private int _totalPokemon;
 
     protected override async Task OnParametersSetAsync()
     {
@@ -104,7 +104,9 @@
     {
         _isLoading = true;
         
-        _pokemon = await pokeApiService.GetPokemonListAsync(_limit, (_currentPage-1) * _limit);
+        var fetchPokemon = await pokeApiService.GetPokemonListAsync(_limit, (_currentPage-1) * _limit);
+        _totalPokemon = fetchPokemon.Item1;
+        _pokemon = fetchPokemon.Item2;
 
         _totalPages = _limit == 0 ? 1 : (int)Math.Ceiling((double)_totalPokemon / _limit);
 
